05-pod-init-container.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo-storage
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - mountPath: /usr/share/nginx/html
        name: html
  volumes:
    - name: html
      emptyDir: {}
