12-env.yml
apiVersion: v1
kind: Pod
metadata:
  name: envar-demo
  labels:
    purpose: demonstrate-envars
spec:
  containers:
  - name: demo
    image: docker.io/rkalluru/learnk8s:rhel9-bare
