14-secrets.yml
apiVersion: v1
kind: Pod
metadata:
  name: envar-demo-secret
  labels:
    purpose: demonstrate-envars
spec:
  containers:
  - name: demo
    image: docker.io/rkalluru/learnk8s:rhel9-bare
---
apiVersion: v1
kind: Pod
metadata:
  name: enfrom-demo-secret
  labels:
    purpose: demonstrate-envars
spec:
  containers:
  - name: demo
    image: docker.io/rkalluru/learnk8s:rhel9-bare
