25-storage-class.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-pvc
spec:
  containers:
    - name: pod
      image: nginx
      volumeMounts:
      - mountPath: "/opt"
        name: claim1
  volumes:
    - name: claim1
      persistentVolumeClaim:
        claimName: claim1
