roboshop-v1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
      - name: frontend
        image: public.ecr.aws/w8x4g9h7/roboshop-v3/frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  labels:
    component: catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      component: catalogue
  template:
    metadata:
      labels:
        component: catalogue
    spec:
      containers:
      - name: catalogue
        image: public.ecr.aws/w8x4g9h7/roboshop-v3/catalogue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  labels:
    component: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cart
  template:
    metadata:
      labels:
        component: cart
    spec:
      containers:
      - name: cart
        image: public.ecr.aws/w8x4g9h7/roboshop-v3/cart
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  labels:
    component: shipping
spec:
  replicas: 1
  selector:
    matchLabels:
      component: shipping
  template:
    metadata:
      labels:
        component: shipping
    spec:
      containers:
      - name: shipping
        image: public.ecr.aws/w8x4g9h7/roboshop-v3/shipping
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    component: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: payment
  template:
    metadata:
      labels:
        component: payment
    spec:
      containers:
      - name: payment
        image: public.ecr.aws/w8x4g9h7/roboshop-v3/payment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    component: user
spec:
  replicas: 1
  selector:
    matchLabels:
      component: user
  template:
    metadata:
      labels:
        component: user
    spec:
      containers:
      - name: payment
        image: public.ecr.aws/w8x4g9h7/roboshop-v3/user
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  selector:
    component: frontend
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
spec:
  type: ClusterIP
  selector:
    component: catalogue
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cart
spec:
  type: ClusterIP
  selector:
    component: cart
  ports:
    - port: 8080
      targetPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: ClusterIP
  selector:
    component: user
  ports:
    - port: 8080
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: shipping
spec:
  type: ClusterIP
  selector:
    component: shipping
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  type: ClusterIP
  selector:
    component: payment
  ports:
    - port: 8080
      targetPort: 8080
